<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingTop="?attr/actionBarSize"
    tools:context="com.sucen.sisamobii.PrincipalActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvLimpa"
        android:id="@+id/textView16" />

    <RadioGroup
        android:id="@+id/rgLimpa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btLimpaFolha"
            android:id="@+id/rbFolha" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btLimpaImovel"
            android:id="@+id/rbImovel" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btLimpaOvitrampa"
            android:id="@+id/rbOvitrampa" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Captura de Alados"
            android:id="@+id/rbAlados" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btLimpaCoordenada"
            android:id="@+id/rbCoordenada" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EDL"
            android:id="@+id/rbEdl" />

    </RadioGroup>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limpTudo"
        android:id="@+id/swTodos" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/limpBotao"
        android:drawableRight="@drawable/erase"
        android:textSize="@dimen/font_small"
        android:paddingRight="60sp"
        android:id="@+id/btLimpa" />

</LinearLayout>
