<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="?attr/actionBarSize">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tvAreaNeb"
            android:textSize="@dimen/font_size" />

        <Spinner
            android:id="@+id/spAreaNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tvArea"
            android:textSize="@dimen/font_size" />

        <Spinner
            android:id="@+id/spArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tvCensitario"
            android:textSize="@dimen/font_size" />

        <Spinner
            android:id="@+id/spCensitario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tvQuarteirao"
            android:textSize="@dimen/font_size" />

        <Spinner
            android:id="@+id/spQuarteirao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTipoTrab"
            android:textSize="@dimen/font_size" />

        <RadioGroup
            android:id="@+id/rgTipoTrab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rbRotina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/chkRotina" />

            <RadioButton
                android:id="@+id/rbPendencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chkPendencia" />
            <RadioButton
                android:id="@+id/rbDemanda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chkDemanda" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvInseticida"
            android:textSize="@dimen/font_size" />
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="1"
            android:stretchColumns="1"
            android:weightSum="10">
            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/font_size"
                    android:text="@string/tvFocal" />
                <Spinner
                    android:id="@+id/spProdFocal"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size" />
            </TableRow>
            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/font_size"
                    android:text="@string/tvPeri" />
                <Spinner
                    android:id="@+id/spProdPeri"
                    android:layout_width="150dp"
                    android:textSize="@dimen/font_size"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/font_size"
                    android:text="@string/tvNeb" />
                <Spinner
                    android:id="@+id/spProdNeb"
                    android:layout_width="150dp"
                    android:textSize="@dimen/font_size"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/font_size"
                    android:text="@string/tvBri" />
                <Spinner
                    android:id="@+id/spProdBri"
                    android:layout_width="150dp"
                    android:textSize="@dimen/font_size"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>
        <Button
            android:id="@+id/btProssegue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/prossegues"
            android:paddingRight="60sp"
            android:text="@string/btProssegue"
            android:textSize="@dimen/font_small" />

    </LinearLayout>

</ScrollView>