<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
	android:paddingTop="?attr/actionBarSize"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvExecucao" 
        android:textSize="@dimen/font_size"/>
    
    <RadioGroup
        android:id="@+id/rgExecucao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/chkSucen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/chkSucen"
            android:textSize="@dimen/font_size" />

        <RadioButton
            android:id="@+id/chkMunicipio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size"
            android:text="@string/chkMunicipio" />

        <RadioButton
            android:id="@+id/chkPsf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size"
            android:text="@string/chkPsf" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvAgente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/font_size"
        android:text="@string/tvAgente" />


	<EditText
		android:id="@+id/etAgente"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="Tamanho máximo: 30 caracteres"
		android:inputType="text"
		android:maxLength="30"
		android:textSize="@dimen/font_size">

		<requestFocus />
	</EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/font_size"
        android:text="@string/tvMunicipio" />

    <Spinner
        android:prompt="@string/spinnerSel"
        android:id="@+id/spMunicipio"
        android:scrollbarThumbVertical="@drawable/scrollbar_style"
        android:textSize="@dimen/font_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/font_size"
        android:text="@string/tvAtividade" />
    
	<LinearLayout
		android:orientation="horizontal"
		android:gravity="center"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" >
    		<!--  <Button
		        android:id="@+id/btTopo"
		        android:drawableRight="@drawable/bottom"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" 
		        android:textSize="@dimen/font_size"
		        android:layout_gravity="left" />-->
		    <Spinner
		        android:prompt="@string/spinnerSel"
		        android:drawSelectorOnTop="true"
		        android:id="@+id/spAtividade"
		        android:verticalScrollbarPosition="right"
		        android:scrollbarThumbVertical="@drawable/scrollbar_style"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content" 
		        android:textSize="@dimen/font_size"
		        android:layout_gravity="center" />
		  <!--    <LinearLayout
		        android:orientation="horizontal"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="right" >
				    <Button
				        android:id="@+id/btBottom"
				        android:drawableRight="@drawable/topo"
				        android:layout_width="wrap_content"
				        android:textSize="@dimen/font_size"
				        android:layout_height="wrap_content" />
		    </LinearLayout>-->
	</LinearLayout>		
	<TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tvData" />

    <EditText
        android:id="@+id/etData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size"
        android:ems="10"
        android:inputType="date" />

    <Button
        android:id="@+id/btProssegue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/prossegues"
        android:textSize="@dimen/font_small"
        android:paddingRight="60sp"
        android:text="@string/btProssegue" />

</LinearLayout>
</ScrollView>