<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.sucen.sisamobii.PrincipalActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="?attr/actionBarSize">
        <TextView
            android:id="@+id/tvConecta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/vermelho"
            android:text="@string/tvConecta"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btImporta"
            android:id="@+id/textView11" />
        <RadioGroup
            android:id="@+id/rgImporta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chkTerritorio"
                android:id="@+id/rbCadastro"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chkSistema"
                android:id="@+id/rbSistema"
                android:checked="false" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvLocal"
            android:id="@+id/textView15" />

        <AutoCompleteTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/etLocal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btImporta"
            android:drawableRight="@drawable/proc_import"
            android:textSize="@dimen/font_size"
            android:paddingRight="60sp"
            android:id="@+id/btImporta" />
        <TextView
            android:id="@+id/tvResumo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size"
            android:text="@string/tvResumo" />
    </LinearLayout>
</ScrollView>
