<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingTop="?attr/actionBarSize" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size"
            android:text="@string/tvImovel" />

        <AutoCompleteTextView
            android:id="@+id/etCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="@dimen/font_size"
            android:text="" >

            <requestFocus />
        </AutoCompleteTextView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size"
            android:text="@string/rgSituacao" />

        <RadioGroup
            android:id="@+id/rgSituacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/chkTrabalhado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textSize="@dimen/font_size"
                android:text="@string/chkTrab" />

            <RadioButton
                android:id="@+id/chkFechado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size"
                android:text="@string/chkFech" />

            <RadioButton
                android:id="@+id/chkRecusa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size"
                android:text="@string/chkRec" />
        </RadioGroup>

        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="1"
            android:stretchColumns="1,2"
            android:weightSum="10">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/font_size"
                    android:text="@string/tvTipoTrat" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:textSize="@dimen/font_size"
                    android:text="@string/tvProdTrat" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="right"
                    android:textSize="@dimen/font_size"
                    android:text="@string/tvQuantTrat" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/chkFocal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size"
                    android:text="@string/tvFocal" />

                <Spinner
                    android:id="@+id/spProdFocal"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size" />

                <utilitarios.NumberPicker
                    android:id="@+id/npFocal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size"
                    android:orientation="horizontal" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/chkPeri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size"
                    android:text="@string/tvPeri" />

                <Spinner
                    android:id="@+id/spProdPeri"
                    android:layout_width="150dp"
                    android:textSize="@dimen/font_size"
                    android:layout_height="wrap_content" />

                <utilitarios.NumberPicker
                    android:id="@+id/npPerifocal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textSize="@dimen/font_size"/>
            </TableRow>
             <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/chkNeb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size"
                android:text="@string/tvNeb" />

            <Spinner
                android:id="@+id/spProdNeb"
                android:layout_width="150dp"
                android:textSize="@dimen/font_size"
                android:layout_height="wrap_content" />

            <utilitarios.NumberPicker
                android:id="@+id/npNebulizacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textSize="@dimen/font_size"/>
        </TableRow>
            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/chkBr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size"
                    android:text="BR Aedes" />

                <Spinner
                    android:id="@+id/spProdBr"
                    android:layout_width="150dp"
                    android:textSize="@dimen/font_size"
                    android:layout_height="wrap_content" />

                <utilitarios.NumberPicker
                    android:id="@+id/npBr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textSize="@dimen/font_size"/>
            </TableRow>
        </TableLayout>
        <CheckBox
        android:id="@+id/chkMecanico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size"
        android:text="@string/chkMecan" />
        <CheckBox
        android:id="@+id/chkAlternativo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size"
        android:text="@string/chkAlter" />

        <Button
            android:id="@+id/btRecipiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/prossegues"
            android:paddingRight="80sp"
            android:textSize="@dimen/font_small"
            android:text="@string/btRecipiente" />
        <Button
            android:id="@+id/btNovo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/novo"
            android:paddingRight="80sp"
            android:textSize="@dimen/font_small"
            android:text="@string/btNovo" />
        <Button
            android:id="@+id/btExcluiCad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/trash"
            android:paddingRight="80sp"
            android:textSize="@dimen/font_small"
            android:text="@string/btExcluiIm" />

    </LinearLayout>
</ScrollView>